# CatsVsDogs

./: .gitignore  pyproject.toml  transfer_learning_D&C.ipynb
