[tool.poetry]
name = "catsvsdogs"
version = "0.1.0"
description = ""
authors = ["BobVitorBob <vitordecastrosilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = {extras = ["with-cuda"], version = "^2.18.0"}
keras = "^3.8.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
tensorflow-datasets = "^4.9.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
